exports[`App (Snapshot) App renders 1`] = `
<div>
  <header>
    <nav
      className="top-nav">
      <div
        className="container">
        <div
          className="nav-wrapper">
          <a
            className="page-title">
            FocusPro
          </a>
        </div>
      </div>
    </nav>
    <div
      className="container">
      <a
        className="button-collapse top-nav full hide-on-large-only"
        data-activates="slide-out"
        href="#">
        <i
          className="material-icons">
          menu
        </i>
      </a>
    </div>
    <ul
      className="side-nav fixed theme-color"
      id="slide-out">
      <li>
        <div
          className="userView">
          <a
            href="#">
            <img
              className="circle" />
          </a>
          <a
            href="#">
            <span
              className="name">
              John Doe
            </span>
          </a>
          <a
            href="#">
            <span
              className="email">
              jdandturk@gmail.com
            </span>
          </a>
          <a
            className="btn"
            href="#">
            Log Out
          </a>
        </div>
      </li>
      <li>
        <div
          className="divider" />
      </li>
      <li>
        <a
          className="waves-effect"
          href="#">
          <i
            className="material-icons icon-white">
            settings
          </i>
          Settings
        </a>
      </li>
      <li>
        <a
          className="waves-effect"
          href="#">
          <i
            className="material-icons icon-white">
            perm_identity
          </i>
          Self Reflections
        </a>
      </li>
    </ul>
  </header>
  <main>
    <div
      className="container" />
  </main>
</div>
`;

exports[`Dashboard (Snapshot) Dashboard renders 1`] = `
<div>
  <h1>
     Welcome, USER 
  </h1>
  <div>
    <h3>
       Goal 
    </h3>
    <div>
      <h5>
         Subgoal 
      </h5>
    </div>
  </div>
</div>
`;

exports[`Goal (Snapshot) Goal renders 1`] = `
<div>
  <h3>
     Goal 
  </h3>
  <div>
    <h5>
       Subgoal 
    </h5>
  </div>
</div>
`;

exports[`Landingpage (Snapshot) Landingpage renders 1`] = `
<div
  className="row">
  <h1>
     FocusPro 
  </h1>
  <h5>
     Welcome to PhocusPro. 
    <br />
     We help you limit distractions and stay on task. 
  </h5>
</div>
`;

exports[`Selfreflection (Snapshot) Selfreflection renders 1`] = `
<div>
  <h1>
     Self-Reflection 
  </h1>
</div>
`;

exports[`Settings (Snapshot) Settings renders 1`] = `
<div>
  <h1>
     Settings 
  </h1>
</div>
`;

exports[`Subgoal (Snapshot) Subgoal renders 1`] = `
<div>
  <h5>
     Subgoal 
  </h5>
</div>
`;
